--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -33,6 +33,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+
 
 <!-- Neon elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
@@ -72,3 +74,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="rooms-list/rooms-list.html">
 <link rel="import" href="loading-placeholder/loading-placeholder.html">
 <link rel="import" href="slot-list/slot-list.html">
+<link rel="import" href="warning-dialog/warning-dialog.html">
